--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     }
   </style>
   <!-- Preload images so transitions feel instant -->
-  <link rel="preload" as="image" href="./images/#bd1e59">
+  <link rel="preload" as="image" href="./images/image1.gif">
   <link rel="preload" as="image" href="./images/image2.gif">
   <link rel="preload" as="image" href="./images/image3.gif">
   <link rel="preload" as="image" href="./images/image4.gif">
@@ -49,7 +49,7 @@
         class="rounded-md h-[300px] object-cover"
       />
       <h1 id="valentineQuestion" class="text-4xl font-bold italic text-[#bd1e59] my-4">
-        Will you be my Valen?
+        Will you be my Valentine?
       </h1>
       <div id="responseButtons" class="flex gap-4 pt-5 items-center">
         <button
@@ -83,7 +83,7 @@
       const MAX_NO_CLICKS = 5;
 
       const IMAGE_PATHS = [
-        './image',
+        './images/image1.gif',
         './images/image2.gif',
         './images/image3.gif',
         './images/image4.gif',
