Update image source to image1.gif

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <section class="flex flex-col items-center p-4">
       <img
         id="imageDisplay"
-        src="./images/#bd1e59"
+        src="./images/image1.gif"
         alt="Cute kitten with flowers"
         class="rounded-md h-[300px] object-cover"
       />
